Fix duviri tarot not knowing what the cave options will be if the game was restarted

--- a/Sentinel.vcxproj.filters
+++ b/Sentinel.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="solarmap.hpp" />
+    <ClInclude Include="DuviriTarot.hpp" />
     <ClInclude Include="squad.hpp" />
     <ClInclude Include="mission.hpp" />
     <ClInclude Include="screenshot.hpp" />
@@ -18,6 +18,7 @@
     <ClInclude Include="data.hpp">
       <Filter>data</Filter>
     </ClInclude>
+    <ClInclude Include="DataCache.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -36,6 +37,8 @@
     <ClCompile Include="data_recipes.cpp">
       <Filter>data</Filter>
     </ClCompile>
+    <ClCompile Include="DataCache.cpp" />
+    <ClCompile Include="DuviriTarot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="resources">
