--- a/Sentinel.vcxproj
+++ b/Sentinel.vcxproj
@@ -166,6 +166,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="data.hpp" />
+    <ClInclude Include="DataCache.hpp" />
     <ClInclude Include="GeoIpService.hpp" />
     <ClInclude Include="Inventory.hpp" />
     <ClInclude Include="LogDevotee.hpp" />
@@ -175,14 +176,16 @@
     <ClInclude Include="ProcessWatcher.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="screenshot.hpp" />
-    <ClInclude Include="solarmap.hpp" />
+    <ClInclude Include="DuviriTarot.hpp" />
     <ClInclude Include="squad.hpp" />
     <ClInclude Include="stdout.hpp" />
     <ClInclude Include="WindowCommons.hpp" />
     <ClInclude Include="WorldState.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DataCache.cpp" />
     <ClCompile Include="data_codenames.cpp" />
+    <ClCompile Include="DuviriTarot.cpp" />
     <ClCompile Include="GeoIpService.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="LogDevotee.cpp" />
