Avoid overwriting existing member IP with an Akamai IP

--- a/Sentinel.vcxproj
+++ b/Sentinel.vcxproj
@@ -165,6 +165,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cidr.hpp" />
     <ClInclude Include="data.hpp" />
     <ClInclude Include="DataCache.hpp" />
     <ClInclude Include="GeoIpService.hpp" />
